@startuml

title __VIEW's Class Diagram__\n

  namespace  {
    namespace abb {
      namespace View {
        class Labb.View.CarView {
            + addCarButton : JButton
            + brakeAmount : int
            + brakeButton : JButton
            + brakeSpinner : JSpinner
            + gasAmount : int
            + gasButton : JButton
            + gasSpinner : JSpinner
            + liftBedButton : JButton
            + lowerBedButton : JButton
            + removeCarButton : JButton
            + startButton : JButton
            + stopButton : JButton
            + turboOffButton : JButton
            + turboOnButton : JButton
            ~ controlPanel : JPanel
            ~ gasLabel : JLabel
            ~ gasPanel : JPanel
            - X : int
            - Y : int
            + CarView()
            - initComponents()
        }
      }
    }
  }
  

  namespace  {
    namespace abb {
      namespace View {
        class Labb.View.DrawPanel {
            + DrawPanel()
            + observerUpdate()
            # paintComponent()
        }
      }
    }
  }
  

  namespace  {
    namespace abb {
      namespace View {
        class Labb.View.SpeedPanel {
            ~ labels : List<JLabel>
            + SpeedPanel()
            + observerUpdate()
            # paintComponent()
            - compareAndAdjust()
            - displayLabels()
            - setLabels()
            - textBuilder()
        }
      }
    }
  }
  

  Labb.View.CarView -up-|> javax.swing.JFrame
  Labb.View.CarView o-- Labb.View.DrawPanel : drawPanel
  Labb.View.CarView o-- Labb.View.SpeedPanel : speedPanel
  Labb.View.DrawPanel .up.|> Labb.IObserver
  Labb.View.DrawPanel -up-|> javax.swing.JPanel
  Labb.View.DrawPanel o-- Labb.Model.Model : model
  Labb.View.SpeedPanel .up.|> Labb.IObserver
  Labb.View.SpeedPanel -up-|> javax.swing.JPanel
  Labb.View.SpeedPanel o-- Labb.Model.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
